# experiments

./: .gitignore  Makefile  README.md  auth_spec.json  cli.py  config.yaml  docker-compose.local.yml  docker-compose.yml  generate_paper_artifacts.py  pyproject.toml
context/mysql_schemas/: policies.json  schema.json
docs/: AUTH_SPEC_FORMAT.md  CONFIG_GUIDE.md  EXPERIMENT_CATALOG.md  FAILURE_RESILIENCE_SETUP.md  PAPER_RESULTS.md  setup.md
framework/: README.md  __init__.py  analysis.py  analysis_analytic.py  analysis_contention.py  analysis_ddl.py  analysis_pgbench.py  analysis_scalability.py  analysis_semantics.py  analysis_tpcc.py  analyzer.py  auth_spec_example.json  auth_spec_extended_example.json  benchmark_runner.py  benchmark_user_setup.py  benchmarksql_client.py  cedar_cache_analysis.py  cedar_stats.py  command_runner.py  comprehensive_breakdown.py  config.py  connection_pool.py  data_generator.py  ddl_operations_test.py  differential_profiling.py  failure_semantics_test.py  metadata.py  multi_run.py  mysql_introspection.py  overhead_breakdown.py  pgbench_runner.py  policy_scaler.py  query_generator.py  query_templates.py  requirements.txt  run_benchmark.py  schema_introspector.py  sql_generator.py  sql_latency_runner.py  stats.py  (+13 more)
scripts/: README.md  cleanup_all.sh  cleanup_baseline_mysql.sh  cleanup_cedar_mysql.sh  collect_system_info.sh  install_vegeta.sh  reproduce_vldb_results.sh  run_performance_overhead.sh  setup_all.sh  setup_baseline_mysql.sh  setup_cedar_mysql.sh  setup_postgres.sh  start_cedar_agent.sh  stop_containers.sh  verify_paper_results.sh
