[project]
name = "experiments"
version = "0.1.0"
description = "Benchmarking framework for MySQL/PostgreSQL authorization comparison"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.12.0",
    "mysql-connector-python>=9.5.0",
    "psycopg2-binary>=2.9.10",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "numpy>=1.26.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = []

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
